--- a/styles.css
+++ b/styles.css
@@ -18,24 +18,11 @@ body {
   font-weight: 300;
   font-spacing: 0.05em;
 }
-a:link {
-  text-decoration: none;
-  color: #1EB2B9;
+
+.bold {
+  font-weight: bold;
 }
 
-a:visited {
-  color: #DA39A0;
-}
-
-a:hover {
-  color: #E0CA08;
-  text-decoration: underline;
-}
-
-a:active {
-  color: #0000FF;
-  text-decoration: underline;
-}
 
 /*header styles*/
 .masthead-heading {
@@ -54,6 +41,7 @@ a:active {
   margin-bottom: 0.1em;
   font-family: "Gentium Book Basic", Georgia, serif;
   font-size: 2em;
+  text-shadow: 5px 5px 5px #1EB2B9;
 }
 
 .masthead-heading {
@@ -64,6 +52,9 @@ a:active {
   letter-spacing: -.02em;
   text-transform: uppercase;
 }
+
+
+
 /*Content styles*/
 
 .introduction-section,
@@ -82,6 +73,17 @@ a:active {
   margin: 2em 0 1em 0;
   color: #1EB2B9
 }
+
+.introduction-section h1 {
+font-size: 2em;
+}
+.location-section h1 {
+  font-size: 2em;
+}
+.questions-section h1 {
+  font-size: 2em;
+}
+
 /*footer styles*/
 
 .footer-section {
@@ -107,3 +109,41 @@ a:active {
 .footer-section > p {
   color: white;
 }
+
+.footer-section a:link {
+  text-decoration: none;
+  color: #1EB2B9;
+}
+
+.footer-section a:visited {
+  color: #DA39A0;
+}
+
+.footer-section a:hover {
+  color: #E0CA08;
+  text-decoration: underline;
+}
+
+.footer-section a:active {
+  color: #0000FF;
+  text-decoration: underline;
+}
+
+
+/* Responsive Design */
+
+@media only screen and (max-width: 500px) {
+.masthead {
+  padding: 3em 0;
+}
+.masthead-heading,.masthead-intro {
+  font-size: 3em;
+}
+.footer-list a {
+font-size: 2em;
+}
+.footer-outro a {
+font-size: 2em;
+}
+}
+
